--- a/page.css
+++ b/page.css
@@ -21,3 +21,19 @@ h1 {
   margin: 0;
   font-size: 48px;
 }
+
+.back-link {
+  position: fixed;
+  top: 32px;
+  left: 32px;
+  color: var(--ink);
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1;
+  z-index: 100;
+}
+
+.back-link:hover {
+  opacity: 0.7;
+}
