--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
   --menu-item-gap: 12px;
   --menu-type-size-min: 20;
   --menu-type-size-max-ratio: 0.6;
-  --menu-type-size: 36px;
+  --menu-type-size: 40px;
 }
 
 html {
@@ -82,6 +82,7 @@ body {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
+
 }
 
 .menu-label {
@@ -92,6 +93,10 @@ body {
   font-weight: bold;
   display: grid;
   transition: color 0.2s ease 0.3s;
+  font-size: 24px;
+  left: 24px;
+  top: 24px;
+
 }
 
 .app:has(.menu-toggle:checked) .menu-label,
